# SecretSanta

./: .gitignore  README.md  config-example.json  pyproject.toml  secret-santa-2021-encrypted.json  secret-santa.ipynb
config/: config.example.json  config.json
src/santify/: __init__.py  __main__.py  email.py  generate.py  logging.py  mapping.py
