[project]
name = "santify"
version = "0.3.0"
description = "Santa gift exchange organizer that automatically assigns givers and recipients while respecting exclusion rules."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=43.0.3",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "typing-extensions>=4.12.2",
    "yagmail>=0.15.293",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.7.2",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213"]
fixable = ["ALL"]
unfixable = []
